# prompt-drift

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
prompt_drift/: __init__.py  cli.py  comparator.py  models.py  reporter.py  similarity.py  snapshot.py  store.py
tests/: test_comparator.py  test_similarity.py  test_snapshot.py  test_store.py
