[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-drift"
version = "0.1.0"
description = "Detect when prompt template changes cause output regressions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Muhammad Rashid", email = "muhammadrashid4587@gmail.com" },
]
keywords = ["llm", "prompt-engineering", "testing", "drift-detection", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
sklearn = ["scikit-learn>=1.0"]
all = ["openai>=1.0", "scikit-learn>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
prompt-drift = "prompt_drift.cli:main"

[project.urls]
Homepage = "https://github.com/muhammadrashid4587/prompt-drift"
Repository = "https://github.com/muhammadrashid4587/prompt-drift"
Issues = "https://github.com/muhammadrashid4587/prompt-drift/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["prompt_drift"]
